	  it is not read-only. (Anton)
	- Fix ntfsresize to unmount the volume when finished/exiting so it does
	  not leave the volume in an inconsistent state.  Somewhat crude
	  solution using atexit() but it works...  (Anton)
	- Raise FUSE dependence to 2.6.1 (the most stable and featured ATM),
	  rename --enable-fuse-module to more clear --enable-ntfsmount and
	  cleanup autotools scripts a bit.

21/06/2006 - 1.13.1 - Various fixes.

	- Fix bug in ntfs_attr_pwrite() when we sometimes lose current run in
	  the runlist.  (Yura)
	- Fix build with --disable-gnome-vfs --enable-fuse-module.  (Gentoo)
	- ntfscluster: identify files even if their clusters aren't set
	  in $Bitmap (useful to find potentially corrupted files). (Szaka)
	- mkntfs: set the physical drive and the extended boot signature to
	  0x80 in the Extended BPB which are needed to boot from disk. (Szaka)
	- ntfsinfo: fix two freed memory usages when dumping $SDS and index
	  allocation entries.  (Szaka)
	- libntfs: add ntfs_attr_readall() which reads the entire data 
	  from an ntfs attribute.  (Szaka)
	- libntfs: add ntfs_index_root_get() which reads the index root of 
	  an attribute.  (Szaka)
	- ntfsclone: the --metadata option will wipe the timestamps in the
	  index allocation attributes as well. This further decreases the 
	  compressed metadata image size by 10-25% and more importantly it
	  eliminates non-interesting ntfscmp differences.  (Szaka)
	- Change utils_parse_size() to use a base of 0 instead of 10 when
	  calling strtoll().  This automatically allows specification of
	  numbers in hex (and octal if anyone is crazy enough to use that) in
	  addition to decimal numbers on the command line options to most if
	  not all utilities.  (Anton)
	- Fix comparison of $MFT and $MFTMirr to not bail out when there are
	  unused, invalid mft records which are the same in both $MFT and
	  $MFTMirr.  Ported from kernel driver 2.1.27 release and applied both